--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [project]
-name = "algobattle-web"
+name = "algobattle_web"
 version = "0.0.1"
 readme = "README.md"
 requires-python = ">=3.10"
@@ -7,8 +7,6 @@ license = {text = "MIT"}
 authors = [{name = "Imogen Hergeth"}, {name = "Henri Lotze"}]
 urls = {github = "https://github.com/Benezivas/algobattle-web"}
 classifiers = [
-    "Development Status :: 5 - Production/Stable",
-    "Environment :: Console",
     "Natural Language :: English",
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
