add config file capabilities

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,8 @@ dependencies = [
     "sqlalchemy",
     "sqlalchemy_utils",
     "tomli",
+    "sqlalchemy-media",
+    "python-multipart",
 ]
 
 [tool.pyright]
