--- a/config_template.toml
+++ b/config_template.toml
@@ -2,3 +2,4 @@
 admin_email = "admin@example.email"
 secret_key = "base64 encoded secret key (32 bytes are recommded)"
 database_url = "sqlite:///./database.db"
+storage_path = "path/to/file/folder"
