--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ dependencies = [
 ]
 
 [project.scripts]
-algobattle_web = "algobattle_web:main"
+algobattle_web = "algobattle_web.app:main"
 
 [tool.pyright]
 diagnosticMode = "workspace"
