--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ algobattle_web = "algobattle_web.app:main"
 
 [tool.pyright]
 diagnosticMode = "workspace"
+exclude = ["db_files/**"]
 
 [tool.setuptools]
 packages = ["algobattle_web"]
