--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,9 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "@types/bootstrap": "^5.2.6",
+    "bootstrap": "^5.2.3",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
