--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/bootstrap": "^5.2.6",
     "bootstrap": "^5.3.0-alpha1",
     "vue": "^3.2.47",
+    "vue-cookies": "^1.8.3",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
