--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,8 @@
     "@types/bootstrap": "^5.2.6",
     "bootstrap": "^5.3.0-alpha1",
     "vue": "^3.2.47",
-    "vue-cookies": "^1.8.3",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
