include algobattle docs

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,6 +4,7 @@ http {
     server { 
         listen 80;
         server_name frontend;
+
         location / {
             root /code/frontend;
             try_files $uri /index.html;
@@ -11,6 +12,12 @@ http {
         
         location /api {
             proxy_pass http://backend:8000;
+        }
+
+        location /docs {
+                root /code;
+                index index.html index.htm;
+                try_files $uri $uri/ /index.html;
         }
     include /etc/nginx/mime.types;
     }
