--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,8 @@ services:
       interval: 2s
       timeout: 20s
       retries: 10
+    volumes:
+      - db-data:/var/lib/mysql
   backend:
     build: backend
     depends_on:
@@ -45,6 +47,8 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
 
 volumes:
+  db-data:
+    # intentionally empty
   db-files:
     # intentionally empty
   algobattle_input:
