--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,11 @@ services:
     depends_on:
       database:
         condition: service_healthy
+    healthcheck:
+      test: "lsof -Pi :8000 -sTCP:LISTEN -t >/dev/null"
+      interval: 2s
+      timeout: 20s
+      retries: 10
     environment:
       - ALGOBATTLE_CONFIG_PATH=/algobattle/config.toml
       - SQL_PASSWORD=${SQL_PASSWORD}
@@ -41,6 +46,9 @@ services:
       - algobattle_output:/algobattle/output
   nginx:
     build: .
+    depends_on:
+      database:
+        condition: service_healthy
     ports:
       - "8080:80"
     volumes:
