move docs to different port

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,7 +2,7 @@ events {}
 
 http {
     server { 
-        listen 80;
+        listen 8080;
         server_name frontend;
 
         location / {
@@ -13,11 +13,17 @@ http {
         location /api {
             proxy_pass http://backend:8000;
         }
+    include /etc/nginx/mime.types;
+    }
 
-        location /docs {
-                root /code;
-                index index.html index.htm;
-                try_files $uri $uri/ /index.html;
+    server {
+        listen 8081;
+        server_name docs;
+
+        location / {
+            root /code/docs;
+            index index.html index.htm;
+            try_files $uri $uri/ /index.html;
         }
     include /etc/nginx/mime.types;
     }
