--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     command: algobattle_runner
     stop_grace_period: 1s
     depends_on:
-      database:
+      backend:
         condition: service_healthy
     environment:
       - ALGOBATTLE_IO_VOLUMES=true
@@ -47,8 +47,6 @@ services:
   nginx:
     build: .
     depends_on:
-      database:
-        condition: service_healthy
       backend:
         condition: service_healthy
     ports:
