--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "python-multipart",
     "sqlalchemy >= 2.0.0b1",
     "pydantic",
+    "pydantic-extra-types",
     "markdown",
     "mysqlclient",
     "sqlalchemy-utils",
