--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,23 +35,22 @@ services:
       backend:
         condition: service_healthy
     environment:
-      - ALGOBATTLE_IO_VOLUMES=true
+      - ALGOBATTLE_IO_DIR=./io
       - TZ=Europe/Berlin
       - SQL_PASSWORD=${SQL_PASSWORD}
     volumes:
       - ./config.toml:/algobattle/config.toml
       - db-files:/algobattle/dbfiles
       - /var/run/docker.sock,target=/var/run/docker.sock
-      - algobattle_input:/algobattle/input
-      - algobattle_output:/algobattle/output
+      - ./io:/algobattle/io
   nginx:
     build: .
     depends_on:
       backend:
         condition: service_healthy
     ports:
-      - "8080:8080"
-      - "8081:8081"
+      - 8080:8080
+      - 8081:8081
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
 
@@ -60,7 +59,3 @@ volumes:
     # intentionally empty
   db-files:
     # intentionally empty
-  algobattle_input:
-    external: true
-  algobattle_output:
-    external: true
