--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,12 @@
     "vue3-cookies": "^1.0.6"
   },
   "devDependencies": {
-    "@openapitools/openapi-generator-cli": "^2.6.0",
+    "@redocly/cli": "^1.0.0",
     "@types/node": "^18.14.2",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/tsconfig": "^0.1.3",
     "npm-run-all": "^4.1.5",
+    "openapi-typescript-codegen": "^0.25.0",
     "sass": "^1.58.3",
     "typescript": "~4.8.4",
     "vite": "^4.1.4",
