--- a/backend/alembic/alembic.ini
+++ b/backend/alembic/alembic.ini
@@ -55,7 +55,8 @@ version_path_separator = os  # Use os.pathsep. Default configuration used for ne
 # are written from script.py.mako
 # output_encoding = utf-8
 
-sqlalchemy.url = sqlite:///../database.db
+# we provide the database URL in our own config file
+sqlalchemy.url = ""
 
 
 [post_write_hooks]
