--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -37,7 +37,7 @@ algobattle_api = "algobattle_web.app:create_openapi"
 algobattle_runner = "algobattle_web.battle:main"
 
 [tool.setuptools]
-packages = ["algobattle_web"]
+packages = ["algobattle_web", "algobattle_web.alembic"]
 
 [tool.setuptools.package-data]
 "algobattle_web.alembic" = ["*"]
