--- a/nginx.conf
+++ b/nginx.conf
@@ -7,23 +7,16 @@ http {
 
         location / {
             root /code/frontend;
-            try_files $uri /index.html;
+            index index.html;
         }
         
         location /api {
             proxy_pass http://backend:8000;
         }
-    include /etc/nginx/mime.types;
-    }
 
-    server {
-        listen 8081;
-        server_name docs;
-
-        location / {
-            root /code/docs;
-            index index.html index.htm;
-            try_files $uri $uri/ /index.html;
+        location /docs {
+            alias /code/docs;
+            index index.html;
         }
     include /etc/nginx/mime.types;
     }
