--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,7 +13,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    "algobattle-base @ git+https://github.com/ImogenBits/algobattle.git@4.0.0-rc",
+    "algobattle-base~=4.0.0rc3",
     "uvicorn",
     "fastapi",
     "python-jose[cryptography]",
