--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "@types/bootstrap": "^5.2.6",
+    "@vueuse/core": "^10.4.1",
+    "@vueuse/integrations": "^10.4.1",
     "bootstrap": "^5.3.0-alpha1",
+    "universal-cookie": "^6.1.1",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6",
-    "vue3-cookies": "^1.0.6"
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
     "@types/node": "^18.14.2",
