--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       - MYSQL_ROOT_PASSWORD=${SQL_PASSWORD}
     healthcheck:
-      test: "mysqladmin ping"
+      test: mysqladmin ping --protocol tcp
       interval: 5s
       timeout: 10s
       retries: 12
