--- a/nginx.conf
+++ b/nginx.conf
@@ -8,6 +8,7 @@ http {
         location / {
             root /code/frontend;
             index index.html;
+            try_files $uri /index.html;
         }
         
         location /api {
