move server config to database

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
     image: mysql
     restart: unless-stopped
     environment:
-      - MYSQL_ROOT_PASSWORD=${SQL_PASSWORD}
+      - MYSQL_ROOT_PASSWORD=${ALGOBATTLE_DB_PW}
     healthcheck:
       test: mysqladmin ping --protocol tcp
       interval: 5s
@@ -23,7 +23,8 @@ services:
       retries: 12
     environment:
       - TZ=Europe/Berlin
-      - SQL_PASSWORD=${SQL_PASSWORD}
+      - ALGOBATTLE_DB_PW=${ALGOBATTLE_DB_PW}
+      - ALGOBATTLE_BASE_URL=${ALGOBATTLE_BASE_URL}
     volumes:
       - ./config.toml:/algobattle/config.toml
       - db-files:/algobattle/dbfiles
@@ -37,7 +38,8 @@ services:
     environment:
       - ALGOBATTLE_IO_DIR=./io
       - TZ=Europe/Berlin
-      - SQL_PASSWORD=${SQL_PASSWORD}
+      - ALGOBATTLE_DB_PW=${ALGOBATTLE_DB_PW}
+      - ALGOBATTLE_BASE_URL=${ALGOBATTLE_BASE_URL}
     volumes:
       - ./config.toml:/algobattle/config.toml
       - db-files:/algobattle/dbfiles
