move dev environment into docker containers

--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -1,7 +1,8 @@
 FROM node
 
 WORKDIR /algobattle
-COPY package.json package-lock.json env.d.ts index.html tsconfig.json tsconfig.node.json vite.config.ts ./
+COPY package.json package-lock.json ./
 RUN npm ci
+COPY env.d.ts index.html tsconfig.json tsconfig.node.json vite.config.ts ./
 
-CMD ["npm", "run", "dev", "--", "--host"]
+CMD ["npm", "run", "dev"]
