--- a/common.yml
+++ b/common.yml
@@ -19,6 +19,7 @@ services:
       - ALGOBATTLE_BASE_URL=${ALGOBATTLE_BASE_URL}
     volumes:
       - db-files:/algobattle/dbfiles
+    tty: true
 
   runner:
     command: algobattle_runner
@@ -32,3 +33,4 @@ services:
       - db-files:/algobattle/dbfiles
       - /var/run/docker.sock:/var/run/docker.sock
       - ${ALGOBATTLE_IO_DIR}:/algobattle/io
+    tty: true
