simplify docker healthchecks

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -42,6 +42,9 @@ services:
       - ./frontend/typescript_client:/algobattle/typescript_client
     ports:
       - 5173:5173
+    depends_on:
+      backend:
+        condition: service_started
 
 volumes:
   db-data:
