--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
       - 8080:8080
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+    restart: on-failure
 
 volumes:
   db-data:
