--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "type-check": "vue-tsc --noEmit"
   },
   "dependencies": {
+    "@fontsource/roboto": "^5.0.8",
     "@popperjs/core": "^2.11.6",
     "@types/bootstrap": "^5.2.6",
     "@vueuse/core": "^10.4.1",
