--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,7 +1,10 @@
+[build-system]
+requires = ["pdm-backend"]
+build-backend = "pdm.backend"
+
 [project]
 name = "algobattle_web"
 version = "0.14.0"
-readme = "README.md"
 requires-python = ">=3.11"
 license = {text = "MIT"}
 authors = [{name = "Imogen Hergeth"}, {name = "Henri Lotze"}]
