--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "bootstrap": "^5.3.0-alpha1",
     "chart.js": "^4.4.0",
     "chartjs-adapter-luxon": "^1.3.1",
+    "chartjs-plugin-annotation": "^3.0.1",
     "luxon": "^3.4.3",
     "universal-cookie": "^6.1.1",
     "vue": "^3.2.47",
