--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -36,6 +36,7 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile.dev
+    stop_signal: SIGKILL
     volumes:
       - ./frontend/public:/algobattle/public
       - ./frontend/src:/algobattle/src
