--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -20,6 +20,7 @@ services:
         condition: service_healthy
 
   dev-runner:
+    init: true
     extends:
       file: common.yml
       service: runner
