use forked repo docs

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -16,18 +16,18 @@ classifiers = [
     "Typing :: Typed",
 ]
 dependencies = [
-    "algobattle-base>=4.1.0",
-    "uvicorn>=0.23.2",
-    "fastapi>=0.103.0",
-    "python-jose[cryptography]>=3.3.0",
-    "python-multipart>=0.0.6",
-    "sqlalchemy>=2.0.23",
-    "pydantic>=2.4.2",
-    "pydantic-extra-types>=2.1.0",
-    "markdown>=3.5",
-    "mysqlclient>=2.2.0",
-    "sqlalchemy-utils>=0.41.1",
-    "alembic>=1.12.0",
+    "algobattle-base~=4.3.0",
+    "uvicorn~=0.23.2",
+    "fastapi~=0.103.0",
+    "python-jose[cryptography]~=3.3.0",
+    "python-multipart~=0.0.6",
+    "sqlalchemy~=2.0.23",
+    "pydantic~=2.5.3",
+    "pydantic-extra-types~=2.1.0",
+    "markdown~=3.5",
+    "mysqlclient~=2.2.0",
+    "sqlalchemy-utils~=0.41.1",
+    "alembic~=1.12.0",
 ]
 
 [project.optional-dependencies]
